feat(angular): create user registration
* create registration page
* add activation dialog

--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
 					"prefix": "sb"
 				},
         "@schematics/angular:pipe": {
-          "standalone": true,
+          "standalone": true
         }
       },
       "root": "",
