--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npx lint-staged & stylelint **/*.sccs",
-      "pre-push": "npx lint-staged & stylelint **/*.sccs"
+      "pre-commit": "npx lint-staged & npx stylelint **/*.sccs",
+      "pre-push": "npx lint-staged & npx stylelint **/*.sccs"
     }
   },
   "lint-staged": {
@@ -27,7 +27,9 @@
       "git add . -f "
     ],
     "*.scss": [
-      "stylelint **/*.scss"
+      "npx stylelint **/*.scss",
+			"prettier --write",
+			"git add . -f "
     ]
   },
   "private": true,
@@ -47,7 +49,6 @@
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "hammerjs": "^2.0.8",
-    "lint-staged": "^15.0.2",
     "ngx-mask": "^16.3.9",
     "ngx-videogular": "^13.2.4",
     "pnpm": "^8.9.2",
@@ -67,6 +68,7 @@
     "@angular-eslint/eslint-plugin-template": "16.2.0",
     "@angular-eslint/schematics": "16.2.0",
     "@angular-eslint/template-parser": "16.2.0",
+		"lint-staged": "^15.0.2",
     "@angular/cli": "^17.0.0-rc.0",
     "@angular/compiler-cli": "^17.0.0-rc.0",
     "@html-eslint/eslint-plugin": "^0.20.0",
@@ -76,6 +78,9 @@
     "@typescript-eslint/parser": "5.62.0",
     "commitlint": "^17.8.0",
     "eslint": "^8.51.0",
+		"simple-git-hooks": "^2.9.0",
+		"stylelint-config-standard": "^34.0.0",
+		"stylelint-order-config-standard": "^0.1.3",
     "eslint-plugin-unused-imports": "^3.0.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
