fix(ci): fixed imports

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,10 @@
   "ignorePatterns": [
     "projects/**/*"
   ],
+	"parserOptions": {
+		"ecmaVersion": "latest",
+		"sourceType": "module"
+	},
 	"plugins": ["unused-imports"],
 	"overrides": [
     {
