--- a/package.json
+++ b/package.json
@@ -32,16 +32,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.0-rc.0",
-    "@angular/common": "^17.0.0-rc.0",
-    "@angular/compiler": "^17.0.0-rc.0",
-    "@angular/core": "^17.0.0-rc.0",
-    "@angular/forms": "^17.0.0-rc.0",
+    "@angular/animations": "^17.0.4",
+    "@angular/common": "^17.0.4",
+    "@angular/compiler": "^17.0.4",
+    "@angular/core": "^17.0.4",
+    "@angular/forms": "^17.0.4",
     "@angular/language-service": "^16.2.11",
     "@angular/platform-browser": "^17.0.0-rc.0",
-    "@angular/platform-browser-dynamic": "^17.0.0-rc.0",
-    "@angular/router": "^17.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "^17.0.4",
+    "@angular/router": "^17.0.4",
     "@commitlint/config-conventional": "^18.0.0",
+    "@ngrx/devtools": "^1.4.0",
+    "@ngrx/effects": "^17.0.0",
+    "@ngrx/entity": "^17.0.0",
+    "@ngrx/store": "^17.0.0",
+    "@ngrx/store-devtools": "^17.0.0",
     "@types/date-fns": "^2.6.0",
     "@types/ffmpeg": "^1.0.6",
     "@types/hammerjs": "^2.0.43",
@@ -66,14 +71,14 @@
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0-rc.0",
-    "@angular-eslint/builder": "16.2.0",
-    "@angular-eslint/eslint-plugin": "16.2.0",
-    "@angular-eslint/eslint-plugin-template": "16.2.0",
-    "@angular-eslint/schematics": "16.2.0",
-    "@angular-eslint/template-parser": "16.2.0",
-    "@angular/cli": "^17.0.0-rc.0",
-    "@angular/compiler-cli": "^17.0.0-rc.0",
+    "@angular-devkit/build-angular": "^17.0.2",
+    "@angular-eslint/builder": "17.1.0",
+    "@angular-eslint/eslint-plugin": "17.1.0",
+    "@angular-eslint/eslint-plugin-template": "17.1.0",
+    "@angular-eslint/schematics": "17.1.0",
+    "@angular-eslint/template-parser": "17.1.0",
+    "@angular/cli": "^17.0.2",
+    "@angular/compiler-cli": "^17.0.4",
     "@ffmpeg/core": "^0.12.4",
     "@ffmpeg/ffmpeg": "^0.12.7",
     "@html-eslint/eslint-plugin": "^0.20.0",
@@ -91,10 +96,10 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^16.2.3",
+    "ng-packagr": "^17.0.2",
     "prettier": "^3.0.3",
     "stylelint": "^15.11.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "~5.2.2"
+    "typescript": "~5.3.2"
   }
 }
