--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,7 @@
 			"@ui": ["./src/shared/ui"],
 			"@types": ["./src/shared/types"],
 			"@interceptors": ["./src/interceptors"],
+			"@store/*": ["src/shared/store/*"],
       "@showcase/*": [
         "./src/showcase/*"
       ],
