--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -25,7 +25,8 @@
 		}],
 		"custom-property-pattern": null,
 		"selector-pseudo-element-no-unknown": [true, { "ignorePseudoElements": ["ng-deep"] }],
-
+		"unit-no-unknown": null,
+		"selector-pseudo-class-no-unknown": null,
 		"at-rule-empty-line-before": null,
 		"value-no-vendor-prefix": null,
 		"selector-no-vendor-prefix": null,
